@@ -1,6 +1,5 @@
 package com.bitsall.service;
 
-import com.bitsall.mapper.AnnouncementMapper;
 import com.bitsall.model.dto.AnnouncementRequest;
 import com.bitsall.model.entity.Announcement;
 import com.bitsall.model.entity.User;
@@ -15,6 +14,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,14 +23,8 @@ public class AnnouncementService {
     private final AnnouncementRepository announcementRepository;
     private final UserRepository userRepository;
     private final AzureBlobService azureBlobService;
-    private final AnnouncementMapper announcementMapper;
 
     public AnnouncementRequest createAnnouncement(AnnouncementRequest announcementRequest, MultipartFile image) throws IOException {
-        // Get the user from the request (authentication not fully configured yet)
-        User currentUser = userRepository.findById(announcementRequest.getCreatedBy())
-                .orElseThrow(() -> new IllegalArgumentException("User not found with id: " + announcementRequest.getCreatedBy()));
-
-        // Optional: If authentication is available, verify the user matches
         try {
             var authentication = SecurityContextHolder.getContext().getAuthentication();
             if (authentication != null && authentication.isAuthenticated() && !"anonymousUser".equals(authentication.getName())) {
@@ -42,8 +36,9 @@ public class AnnouncementService {
                 }
                 
                 if (authenticatedUser != null && authenticatedUser.getRole() == UserRole.DEPARTMENT_HEAD) {
-                    if (announcementRequest.getDepartment() != authenticatedUser.getDepartment()) {
-                        throw new SecurityException("Department heads can only create announcements for their own department.");
+                    if (authenticatedUser.getDepartments() == null || 
+                        !authenticatedUser.getDepartments().contains(announcementRequest.getDepartment())) {
+                        throw new SecurityException("Department heads can only create announcements for their assigned departments.");
                     }
                 }
             }
@@ -55,7 +50,18 @@ public class AnnouncementService {
             // In production, you should have proper authentication
         }
 
-        Announcement announcement = announcementMapper.toEntity(announcementRequest);
+        User user = userRepository.findById(announcementRequest.getCreatedBy())
+                .orElseThrow(() -> new IllegalArgumentException("User not found with id: " + announcementRequest.getCreatedBy()));
+
+        Announcement announcement = Announcement.builder()
+                .title(announcementRequest.getTitle())
+                .body(announcementRequest.getBody())
+                .expiryDate(announcementRequest.getExpiryDate())
+                .links(announcementRequest.getLinks())
+                .visibility(announcementRequest.getVisibility())
+                .department(announcementRequest.getDepartment())
+                .createdBy(user)
+                .build();
 
         if (image != null && !image.isEmpty()) {
             String imageUrl = azureBlobService.uploadFile(image, "announcements", announcement.getTitle());
@@ -63,19 +69,34 @@ public class AnnouncementService {
         }
 
         Announcement saved = announcementRepository.save(announcement);
-        return announcementMapper.toDto(saved);
+        return toDto(saved);
     }
 
     public List<AnnouncementRequest> getAllAnnouncements() {
         return announcementRepository.findAll().stream()
-                .map(announcementMapper::toDto)
-                .toList();
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     public AnnouncementRequest getAnnouncementById(UUID id) {
         Announcement announcement = announcementRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Announcement not found with id: " + id));
-        return announcementMapper.toDto(announcement);
+        return toDto(announcement);
+    }
+
+    private AnnouncementRequest toDto(Announcement announcement) {
+        AnnouncementRequest dto = new AnnouncementRequest();
+        dto.setId(announcement.getId());
+        dto.setTitle(announcement.getTitle());
+        dto.setBody(announcement.getBody());
+        dto.setDatePosted(announcement.getDatePosted());
+        dto.setExpiryDate(announcement.getExpiryDate());
+        dto.setLinks(announcement.getLinks());
+        dto.setVisibility(announcement.getVisibility());
+        dto.setDepartment(announcement.getDepartment());
+        dto.setImageUrl(announcement.getImageUrl());
+        dto.setCreatedBy(announcement.getCreatedBy() != null ? announcement.getCreatedBy().getId() : null);
+        return dto;
     }
 
     public void deleteAnnouncement(UUID id) {
